Updates from Overleaf

--- a/bib/custom.bib
+++ b/bib/custom.bib
@@ -1099,3 +1099,845 @@ publisher = {A Bradford Book},
 address = {Cambridge, MA, USA},
 abstract = {The significantly expanded and updated new edition of a widely used text on reinforcement learning, one of the most active research areas in artificial intelligence. Reinforcement learning, one of the most active research areas in artificial intelligence, is a computational approach to learning whereby an agent tries to maximize the total amount of reward it receives while interacting with a complex, uncertain environment. In Reinforcement Learning, Richard Sutton and Andrew Barto provide a clear and simple account of the field's key ideas and algorithms. This second edition has been significantly expanded and updated, presenting new topics and updating coverage of other topics. Like the first edition, this second edition focuses on core online learning algorithms, with the more mathematical material set off in shaded boxes. Part I covers as much of reinforcement learning as possible without going beyond the tabular case for which exact solutions can be found. Many algorithms presented in this part are new to the second edition, including UCB, Expected Sarsa, and Double Learning. Part II extends these ideas to function approximation, with new sections on such topics as artificial neural networks and the Fourier basis, and offers expanded treatment of off-policy learning and policy-gradient methods. Part III has new chapters on reinforcement learning's relationships to psychology and neuroscience, as well as an updated case-studies chapter including AlphaGo and AlphaGo Zero, Atari game playing, and IBM Watson's wagering strategy. The final chapter discusses the future societal impacts of reinforcement learning.}
 }
+
+% Use this file for citations not found in the ACL Anthology (contained in "anthology.bib").
+
+@book{Aho:72,
+    author  = {Alfred V. Aho and Jeffrey D. Ullman},
+    title   = {The Theory of Parsing, Translation and Compiling},
+    year    = "1972",
+    volume  = "1",
+    publisher = {Prentice-Hall},
+}
+
+@book{APA:83,
+    author  = {{American Psychological Association}},
+    title   = {Publications Manual},
+    year    = "1983",
+    publisher = {American Psychological Association}
+}
+
+@article{Chandra:81,
+	author = {Ashok K. Chandra and Dexter C. Kozen and Larry J. Stockmeyer},
+	year = "1981",
+	title = {Alternation},
+	journal = {Journal of the Association for Computing Machinery},
+	volume = "28",
+	number = "1",
+	pages = "114--133",
+	doi = "10.1145/322234.322243",
+}
+
+@inproceedings{andrew2007scalable,
+  title={Scalable training of {$L_1$}-regularized log-linear models},
+  author={Andrew, Galen and Gao, Jianfeng},
+  booktitle={Proceedings of the 24th International Conference on Machine Learning},
+  pages={33--40},
+  year={2007},
+  url={https://dl.acm.org/doi/abs/10.1145/1273496.1273501}
+}
+
+@book{Gusfield:97,
+    author  = {Dan Gusfield},
+    title   = {Algorithms on Strings, Trees and Sequences},
+    year    = "1997",
+    publisher = {Cambridge University Press},
+    url={https://www.cambridge.org/core/books/algorithms-on-strings-trees-and-sequences/F0B095049C7E6EF5356F0A26686C20D3}
+}
+
+@article{rasooli-tetrault-2015,
+    author    = {Mohammad Sadegh Rasooli and Joel R. Tetreault},
+    title     = {Yara Parser: {A} Fast and Accurate Dependency Parser},
+    journal   = {Computing Research Repository},
+    volume    = {arXiv:1503.06733},
+    year      = {2015},
+    url       = {http://arxiv.org/abs/1503.06733},
+    note    = {version 2}
+}
+
+@article{Ando2005,
+	Acmid = {1194905},
+	Author = {Ando, Rie Kubota and Zhang, Tong},
+	Issn = {1532-4435},
+	Issue_Date = {12/1/2005},
+	Journal = {Journal of Machine Learning Research},
+	Month = dec,
+	Numpages = {37},
+	Pages = {1817--1853},
+	Publisher = {JMLR.org},
+	Title = {A Framework for Learning Predictive Structures from Multiple Tasks and Unlabeled Data},
+	Volume = {6},
+	Year = {2005},
+	url={https://www.jmlr.org/papers/volume6/ando05a/ando05a.pdf}
+}
+
+@article{ct1965,
+  title={An algorithm for the machine calculation of complex {F}ourier series},
+  author={Cooley, James W. and Tukey, John W.},
+  journal={Mathematics of Computation},
+  volume={19},
+  number={90},
+  pages={297--301},
+  year={1965},
+  url={https://www.ams.org/journals/mcom/1965-19-090/S0025-5718-1965-0178586-1/S0025-5718-1965-0178586-1.pdf}
+}
+
+
+@article{washpost,
+ author  = {Verma, Pranshu},
+ date    = {2022-12-01},
+ year    = {2022},
+ title   = {Meta’s new {AI} is skilled at a ruthless, power-seeking game},
+ journal = {The Washington Post},
+ url     = {https://www.washingtonpost.com/technology/2022/12/01/meta-diplomacy-ai-cicero/},
+ urldate = {2024-01-12}
+}
+@article{forbes,
+ author  = {Carlie Porterfield},
+ date    = {2022-11-22},
+ year    = {2022},
+ title   = {Meta’s {AI} {G}amer {B}eat {H}umans in {D}iplomacy, {U}sing {S}trategy and {N}egotiation},
+ journal = {Forbes},
+ url     = {https://www.forbes.com/sites/carlieporterfield/2022/11/22/metas-ai-gamer-beat-humans-in-diplomacy-using-strategy-and-negotiation},
+ urldate = {2024-01-12}
+}
+@article{nature_diplomacy,
+ author  = {Anil Ananthaswamy},
+ date    = {2022-12-01},
+ title   = {DeepMind AI topples experts at complex game Stratego},
+ journal = {nature},
+ url     = {https://www.nature.com/articles/d41586-022-04246-7},
+ urldate = {2024-01-12}
+}
+
+@misc{Albert,
+  title = {Albert},
+  year={2009},
+  author= {Jason van Hal},
+  howpublished = {\url{https://sites.google.com/site/diplomacyai/albert}},
+  note = {Accessed: 2024-01-13}
+}
+@misc{DAIDE,
+  author={Rose, Andrew and Norman, David},
+  year={2002},
+  title = {Diplomacy Artificial Intelligence Development Environment},
+  howpublished = {\url{http://www.daide.org.uk/index.html}},
+  note = {Accessed: 2024-01-13}
+}
+
+
+% SillyNegoBot
+@inproceedings{polberg2011developing,
+  title={Developing intelligent bots for the {D}iplomacy game},
+  author={Polberg, Sylwia and Paprzycki, Marcin and Ganzha, Maria},
+  booktitle={2011 Federated Conference on Computer Science and Information Systems (FedCSIS)},
+  pages={589--596},
+  year={2011},
+  organization={IEEE},
+url={https://ieeexplore.ieee.org/document/6078245}
+}
+% dipblue
+@inproceedings{ferreira2015strategic,
+  title={Strategic {N}egotiation and {T}rust in {D}iplomacy--the {D}ip{B}lue {A}pproach},
+  author={Ferreira, Andr{\'e} and Lopes Cardoso, Henrique and Reis, Lu{\'\i}s Paulo},
+  booktitle={Transactions on Computational Collective Intelligence XX},
+  pages={179--200},
+  year={2015},
+  publisher="Springer International Publishing",
+doi="10.1007/978-3-319-27543-7_9",
+url="https://doi.org/10.1007/978-3-319-27543-7_9"
+}
+
+
+
+@inproceedings{cai-knight-2013-smatch,
+    title = "{S}match: an {E}valuation {M}etric for {S}emantic {F}eature {S}tructures",
+    author = "Cai, Shu and Knight, Kevin",
+    booktitle = "Proceedings of the 51st Annual Meeting of the Association for Computational Linguistics (Volume 2: Short Papers)",
+    year = "2013",
+    url = "https://www.aclweb.org/anthology/P13-2131",
+}
+
+@book{Fernández2018,
+author="Fern{\'a}ndez, Alberto
+and Garc{\'i}a, Salvador
+and Galar, Mikel
+and Prati, Ronaldo C.
+and Krawczyk, Bartosz
+and Herrera, Francisco",
+title="Foundations on Imbalanced Classification",
+bookTitle="Learning from Imbalanced Data Sets",
+year="2018",
+publisher="Springer International Publishing",
+pages="19--46",
+abstract="Class imbalance is present in many real-world classification datasets and consists in a disproportion of the number of examples of the different classes in the problem. This issue is known to hinder the performance of classifiers due to their accuracy oriented design, which usually makes the minority class to be overlooked. In this chapter the foundations on the class imbalance problem are introduced. Section 2.1 gives a formal description to imbalanced classification and shows why specific methods are required to deal with this problem. Section 2.2 is devoted to an overview of different application domains where imbalanced classification is present. Finally, Sect. 2.3 presents several case studies on imbalanced classification, including several test beds where algorithms designed to address imbalanced classification problems can be compared. Some of these case studies will be considered in the remaining of this Book in order to analyze the behavior of the different methods discussed.",
+isbn="978-3-319-98074-4",
+doi="10.1007/978-3-319-98074-4_2",
+url="https://doi.org/10.1007/978-3-319-98074-4_2"
+}
+
+@inproceedings{langkilde-knight-1998-generation,
+    title = "Generation that Exploits Corpus-Based Statistical Knowledge",
+    author = "Langkilde, Irene  and
+      Knight, Kevin",
+    booktitle = "{COLING} 1998 Volume 1: The 17th International Conference on Computational Linguistics",
+    year = "1998",
+    url = "https://aclanthology.org/C98-1112",
+}
+
+@article{doi:10.1080/01621459.1979.10481038,
+author = {William S. Cleveland},
+title = {Robust {L}ocally {W}eighted {R}egression and {S}moothing {S}catterplots},
+journal = {Journal of the American Statistical Association},
+volume = {74},
+number = {368},
+pages = {829-836},
+year = {1979},
+publisher = {Taylor & Francis},
+doi = {10.1080/01621459.1979.10481038},
+URL = { 
+        https://www.tandfonline.com/doi/abs/10.1080/01621459.1979.10481038
+},
+eprint = { 
+        https://www.tandfonline.com/doi/pdf/10.1080/01621459.1979.10481038
+}
+}
+
+@misc{light2023avalonbench,
+      title={Avalon{B}ench: {E}valuating {LLM}s {P}laying the {G}ame of {A}valon}, 
+      author={Jonathan Light and Min Cai and Sheng Shen and Ziniu Hu},
+      year={2023},
+      booktitle={NeurIPS 2023 Foundation Models for Decision Making Workshop},
+      url={https://openreview.net/forum?id=ltUrSryS0K}
+}
+
+@misc{alma9980891613105898,
+abstract = {The Resistance: Avalon is a social deduction game with secret identities. Players are either members of the King Arthur's court representing the future of Britain, or Minions of Mordred hidden among Arthur's warriors while trying to thwart them.},
+author = {Eskridge, Don},
+booktitle = {The resistance : Avalon},
+keywords = {Avalon (Legendary place)},
+language = {eng},
+publisher = {Lone Oak Games Inc.},
+title = {The resistance : Avalon },
+year = {2012},
+}
+
+@inproceedings{callison-burch-tomar-et-al-2022,
+  title={Dungeons and Dragons as a Dialog Challenge for Artificial Intelligence},
+  author={Chris Callison-Burch and Gaurav Singh Tomar and Lara Martin and Daphne Ippolito and Suma Bailis and David Reitter},
+  booktitle=emnlp,
+  year={2022}
+}
+
+@book{dnd,
+  title={dungeons \& dragons},
+  author={Gygax, Gary and Arneson, Dave},
+  volume={19},
+  year={1974},
+  publisher={Tactical Studies Rules Lake Geneva, WI}
+}
+
+@inproceedings{zhu-et-al-2023-fireball-dataset,
+  author = {Zhu, Andrew and Aggarwal, Karmanya and Feng, Alexander and Martin, Lara and Callison-Burch, Chris and Choi, Yejin and Ammanabrolu, Prithviraj},
+  title = {FIREBALL: A Dataset of Dungeons and Dragons Actual-Play with Structured Game State Information},
+  booktitle={Proceedings of the The 61st Annual Meeting of the Association for Computational Linguistics (ACL 2023)},
+  year = {2023},  
+  copyright = {Creative Commons Attribution 4.0 International}
+}
+
+@inproceedings{Pei-et-al-2023-dnd-theory-of-mind,
+  author = {Zhou, Pei and Zhu, Andrew and Hu, Jennifer and Pujara, Jay and Ren, Xiang and Callison-Burch, Chris and Choi, Yejin and Ammanabrolu, Prithviraj},
+  keywords = {Computation and Language (cs.CL), Artificial Intelligence (cs.AI), FOS: Computer and information sciences, FOS: Computer and information sciences},
+  title = {An AI Dungeon Master's Guide: Learning to Converse and Guide with Intents and Theory-of-Mind in Dungeons and Dragons},
+  booktitle=acl,
+  year = {2023},  
+  copyright = {Creative Commons Attribution 4.0 International}
+}
+
+@inproceedings{zhu2023calypso,
+   title={{CALYPSO}: {LLMs} as Dungeon Masters' Assistants},
+   author={Zhu, Andrew and Martin, Lara J. and Head, Andrew and Callison-Burch, Chris},
+   booktitle=aaai,
+   year={2023}
+}
+
+@article{Premack_Woodruff_1978, 
+  title={Does the chimpanzee have a theory of mind?}, 
+  volume={1}, 
+  DOI={10.1017/S0140525X00076512}, 
+  number={4}, 
+  journal={Behavioral and Brain Sciences}, 
+  author={Premack, David and Woodruff, Guy}, 
+  year={1978}, 
+  pages={515–526}
+}
+
+@misc{park2023ai,
+      title={AI Deception: A Survey of Examples, Risks, and Potential Solutions}, 
+      author={Peter S. Park and Simon Goldstein and Aidan O'Gara and Michael Chen and Dan Hendrycks},
+      year={2023},
+      eprint={2308.14752},
+      archivePrefix={arXiv},
+      primaryClass={cs.CY}
+}
+
+@article{10.1145/3137597.3137600,
+author = {Shu, Kai and Sliva, Amy and Wang, Suhang and Tang, Jiliang and Liu, Huan},
+title = {Fake News Detection on Social Media: A Data Mining Perspective},
+year = {2017},
+issue_date = {June 2017},
+publisher = {Association for Computing Machinery},
+volume = {19},
+number = {1},
+issn = {1931-0145},
+url = {https://doi.org/10.1145/3137597.3137600},
+doi = {10.1145/3137597.3137600},
+abstract = {Social media for news consumption is a double-edged sword. On the one hand, its low cost, easy access, and rapid dissemination of information lead people to seek out and consume news from social media. On the other hand, it enables the wide spread of fake news", i.e., low quality news with intentionally false information. The extensive spread of fake news has the potential for extremely negative impacts on individuals and society. Therefore, fake news detection on social media has recently become an emerging research that is attracting tremendous attention. Fake news detection on social media presents unique characteristics and challenges that make existing detection algorithms from traditional news media ine ective or not applicable. First, fake news is intentionally written to mislead readers to believe false information, which makes it difficult and nontrivial to detect based on news content; therefore, we need to include auxiliary information, such as user social engagements on social media, to help make a determination. Second, exploiting this auxiliary information is challenging in and of itself as users' social engagements with fake news produce data that is big, incomplete, unstructured, and noisy. Because the issue of fake news detection on social media is both challenging and relevant, we conducted this survey to further facilitate research on the problem. In this survey, we present a comprehensive review of detecting fake news on social media, including fake news characterizations on psychology and social theories, existing algorithms from a data mining perspective, evaluation metrics and representative datasets. We also discuss related research areas, open problems, and future research directions for fake news detection on social media.},
+journal = {SIGKDD Explor. Newsl.},
+month = {sep},
+pages = {22–36},
+numpages = {15}
+}
+
+@article{xu2023language,
+      title={Language {A}gents with {R}einforcement {L}earning for {S}trategic {P}lay in the {W}erewolf {G}ame}, 
+      author={Zelai Xu and Chao Yu and Fei Fang and Yu Wang and Yi Wu},
+      year={2023},
+journal={arXiv preprint arXiv:2310.18940},
+      eprint={2310.18940},
+      archivePrefix={arXiv},
+      primaryClass={cs.AI},
+url={https://doi.org/10.48550/arXiv.2310.18940}
+}
+
+@article{hagendorff2023deception,
+  title={Deception abilities emerged in large language models},
+  author={Hagendorff, Thilo},
+  journal={arXiv preprint arXiv:2307.16513},
+  year={2023}
+}
+
+@inproceedings{lucas2023fighting,
+  title={Fighting {F}ire with {F}ire: The {D}ual {R}ole of {LLM}s in {C}rafting and {D}etecting {E}lusive {D}isinformation},
+  author={Lucas, Jason and Uchendu, Adaku and Yamashita, Michiharu and Lee, Jooyoung and Rohatgi, Shaurya and Lee, Dongwon},
+publisher = "Association for Computational Linguistics",
+booktitle = "Proceedings of the 2023 Conference on Empirical Methods in Natural Language Processing",
+    month = dec,
+    year = "2023",
+    url = "https://aclanthology.org/2023.emnlp-main.883",
+    doi = "10.18653/v1/2023.emnlp-main.883",
+}
+@inproceedings{stepputtis2023long,
+  title={{L}ong-{H}orizon {D}ialogue {U}nderstanding for {R}ole {I}dentification in the {G}ame of {A}valon with {L}arge {L}anguage {M}odels},
+  author={Stepputtis, Simon and Campbell, Joseph and Xie, Yaqi and Qi, Zhengyang and Zhang, Wenxin Sharon and Wang, Ruiyi and Rangreji, Sanketh and Lewis, Michael and Sycara, Katia},
+    booktitle = "Findings of the Association for Computational Linguistics: EMNLP 2023",
+    month = dec,
+    year = "2023",
+    publisher = "Association for Computational Linguistics",
+    url = "https://aclanthology.org/2023.findings-emnlp.748",
+    doi = "10.18653/v1/2023.findings-emnlp.748",
+}
+@article{lan2023llm,
+  title={{LLM}-based agent society investigation: {C}ollaboration and confrontation in {A}valon gameplay},
+  author={Lan, Yihuai and Hu, Zhiqiang and Wang, Lei and Wang, Yang and Ye, Deheng and Zhao, Peilin and Lim, Ee-Peng and Xiong, Hui and Wang, Hao},
+  journal={arXiv preprint arXiv:2310.14985},
+  year={2023},
+url={https://arxiv.org/pdf/2310.14985}
+}
+@article{hallahan2007defining,
+  title={Defining {S}trategic {C}ommunication},
+  author={Hallahan, Kirk and Holtzhausen, Derina and Van Ruler, Betteke and Ver{\v{c}}i{\v{c}}, Dejan and Sriramesh, Krishnamurthy},
+  journal={International Journal of Strategic Communication},
+  volume={1},
+  number={1},
+  pages={3--35},
+  year={2007},
+  publisher={Routledge},
+URL = {https://doi.org/10.1080/15531180701285244},
+eprint = {https://doi.org/10.1080/15531180701285244}
+}
+@article{deck2023bullshit,
+  title={Bullshit, Pragmatic Deception, and Natural Language Processing},
+  author={Deck, Oliver},
+  journal={Dialogue \& Discourse},
+  volume={14},
+  number={1},
+  pages={56--87},
+  year={2023},
+    url={https://journals.uic.edu/ojs/index.php/dad/article/view/12690/11035}
+}
+@inproceedings{schulz2023emergent,
+  title={Emergent deception and skepticism via theory of mind},
+  author={Schulz, Lion and Alon, Nitay and Rosenschein, Jeffrey and Dayan, Peter},
+  booktitle={First Workshop on Theory of Mind in Communicating Agents},
+  year={2023}
+}
+
+@inproceedings{ibraheem2022putting,
+  title={Putting the {C}on in {C}ontext: {I}dentifying {D}eceptive {A}ctors in the {G}ame of {M}afia},
+  author={Ibraheem, Samee and Zhou, Gaoyue and DeNero, John},
+booktitle = "Proceedings of the 2022 Conference of the North American Chapter of the Association for Computational Linguistics: Human Language Technologies",
+  publisher = "Association for Computational Linguistics",
+  year={2022},
+url = "https://aclanthology.org/2022.naacl-main.11",
+}
+
+@article{ashktorab2020human,
+  title={Human-ai collaboration in a cooperative game setting: Measuring social perception and outcomes},
+  author={Ashktorab, Zahra and Liao, Q Vera and Dugan, Casey and Johnson, James and Pan, Qian and Zhang, Wei and Kumaravel, Sadhana and Campbell, Murray},
+  journal={Proceedings of the ACM on Human-Computer Interaction},
+  volume={4},
+  number={CSCW2},
+  pages={1--20},
+  year={2020},
+  publisher={ACM New York, NY, USA}
+}
+@inproceedings{schelble2021understanding,
+  title={Understanding human-AI cooperation through game-theory and reinforcement learning models},
+  author={Schelble, Beau and Flathmann, Christopher and Canonico, Lorenzo-Barberis and Mcneese, Nathan},
+  booktitle={Proceedings of the Annual Hawaii International Conference on System Sciences},
+  year={2021}
+}
+@inproceedings{chattopadhyay2017evaluating,
+  title={Evaluating visual conversational agents via cooperative human-ai games},
+  author={Chattopadhyay, Prithvijit and Yadav, Deshraj and Prabhu, Viraj and Chandrasekaran, Arjun and Das, Abhishek and Lee, Stefan and Batra, Dhruv and Parikh, Devi},
+  booktitle={Proceedings of the AAAI Conference on Human Computation and Crowdsourcing},
+  volume={5},
+  pages={2--10},
+  year={2017}
+}
+@article{kim2018performance,
+  title={Performance {E}valuation {G}aps in a {R}eal-{T}ime {S}trategy {G}ame {B}etween {H}uman and {A}rtificial {I}ntelligence {P}layers},
+  author={Kim, Man-Je and Kim, Kyung-Joong and Kim, Seungjun and Dey, Anind K},
+  journal={IEEE Access},
+  volume={6},
+  pages={13575--13586},
+  year={2018},
+  publisher={IEEE},
+url={https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=8276283}
+}
+@article{wang2019persuasion,
+  title={Persuasion for good: Towards a personalized persuasive dialogue system for social good},
+  author={Wang, Xuewei and Shi, Weiyan and Kim, Richard and Oh, Yoojung and Yang, Sijia and Zhang, Jingwen and Yu, Zhou},
+  journal={arXiv preprint arXiv:1906.06725},
+  year={2019}
+}
+@article{huang2023artificial,
+  title={Is artificial intelligence more persuasive than humans? A meta-analysis},
+  author={Huang, Guanxiong and Wang, Sai},
+  journal={Journal of Communication},
+  volume={73},
+  number={6},
+  pages={552--562},
+  year={2023},
+  publisher={Oxford University Press},
+url = {https://doi.org/10.1093/joc/jqad024},
+eprint = {https://academic.oup.com/joc/article-pdf/73/6/552/54463455/jqad024.pdf}
+}
+
+
+@article{bakhtin2021no,
+  title={No-{P}ress {D}iplomacy from {S}cratch},
+  author={Bakhtin, Anton and Wu, David and Lerer, Adam and Brown, Noam},
+  journal=nips,
+  year={2021},
+    url={https://proceedings.neurips.cc/paper/2021/file/95f2b84de5660ddf45c8a34933a2e66f-Paper.pdf}
+}
+
+
+@article{carson2006lying,
+ ISSN = {00294624, 14680068},
+ URL = {http://www.jstor.org/stable/3506133},
+ author = {Thomas L. Carson},
+ journal = {Noûs},
+ number = {2},
+ pages = {284--306},
+ publisher = {Wiley},
+ title = {The Definition of Lying},
+ urldate = {2024-02-27},
+ volume = {40},
+ year = {2006}
+}
+
+@article{roy2007baldfaced,
+author = {Sorensen, Roy},
+title = {BALD-FACED LIES! LYING WITHOUT THE INTENT TO DECEIVE},
+journal = {Pacific Philosophical Quarterly},
+volume = {88},
+number = {2},
+pages = {251-264},
+doi = {https://doi.org/10.1111/j.1468-0114.2007.00290.x},
+url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/j.1468-0114.2007.00290.x},
+eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1111/j.1468-0114.2007.00290.x},
+abstract = {Abstract:  Surprisingly, the fact that the speaker is lying is sometimes common knowledge between everyone involved (the addressee, the general audience, bystanders, etc.). Strangely, we condemn these bald-faced lies more severely than disguised lies. The wrongness of lying springs from the intent to deceive – just the feature missing in the case of bald-faced lies. These puzzling lies arise systematically when assertions are forced. Intellectual duress helps to explain another type of non-deceptive false assertion: lying to yourself. In the end, I conclude that the apparent intensity of our disapproval of non-deceptive lies is a rhetorical illusion.},
+year = {2007}
+}
+
+@article{chrisholm1977intent,
+ ISSN = {0022362X},
+ URL = {http://www.jstor.org/stable/2025605},
+ author = {Roderick M. Chisholm and Thomas D. Feehan},
+ journal = {The Journal of Philosophy},
+ publisher = {Journal of Philosophy, Inc.},
+ title = {The {I}ntent to {D}eceive},
+ year = {1977}
+}
+
+@article{mahon2015def,
+author = {Mahon, James},
+year = {2015},
+month = {12},
+pages = {},
+title = {The Definition of Lying and Deception},
+journal = {Stanford Encyclopedia of Philosophy}
+}
+
+@misc{amrlib2023,
+  author = {Jascob,Brad},
+  title = {amrlib: A python library that makes AMR parsing, generation and visualization simple.},
+  year = {2023},
+  publisher = {GitHub},
+  journal = {GitHub repository},
+  howpublished = {\url{https://github.com/bjascob/amrlib}}
+}
+
+@article{deception1982,
+author = {Donald C. Daniel and Katherine L. Herbig},
+title = {Propositions on military deception},
+journal = {Journal of Strategic Studies},
+volume = {5},
+number = {1},
+pages = {155-177},
+year = {1982},
+publisher = {Routledge},
+doi = {10.1080/01402398208437105},
+URL = { https://doi.org/10.1080/01402398208437105},
+eprint = { https://doi.org/10.1080/01402398208437105}
+}
+
+@article{kraus1995designing,
+  title={Designing and building a negotiating automated agent},
+  author={Kraus, Sarit and Lehmann, Daniel},
+  journal={Computational Intelligence},
+  volume={11},
+  number={1},
+  pages={132--171},
+  year={1995},
+  publisher={Wiley Online Library},
+doi = {https://doi.org/10.1111/j.1467-8640.1995.tb00026.x},
+url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/j.1467-8640.1995.tb00026.x}
+}
+@book{sharp1978game,
+  title={The Game of Diplomacy},
+  author={Sharp, Richard},
+  isbn={9780213166762},
+  lccn={80471799},
+  url={https://books.google.com/books?id=X4fkAQAACAAJ},
+  year={1978},
+  publisher={A. Barker}
+}
+
+@article{sobel2020lying,
+  title={Lying and deception in games},
+  author={Sobel, Joel},
+  journal={Journal of Political Economy},
+  volume={128},
+  number={3},
+  pages={907--947},
+  year={2020},
+  publisher={The University of Chicago Press Chicago, IL}
+}
+
+@inproceedings{mnih2016asynchronous,
+  title={Asynchronous {M}ethods for {D}eep {R}einforcement {L}earning},
+  author={Mnih, Volodymyr and Badia, Adria Puigdomenech and Mirza, Mehdi and Graves, Alex and Lillicrap, Timothy and Harley, Tim and Silver, David and Kavukcuoglu, Koray},
+  booktitle=icml,
+  year={2016},
+  organization={PMLR},
+url={https://proceedings.mlr.press/v48/mniha16.pdf}
+}
+
+% LLM human
+% code
+@article{roziere2023code,
+  title={Code {L}lama: {O}pen {F}oundation {M}odels for {C}ode},
+  author={Roziere, Baptiste and Gehring, Jonas and Gloeckle, Fabian and Sootla, Sten and Gat, Itai and Tan, Xiaoqing Ellen and Adi, Yossi and Liu, Jingyu and Remez, Tal and Rapin, J{\'e}r{\'e}my and others},
+  journal={arXiv preprint arXiv:2308.12950},
+  year={2023},
+url={https://arxiv.org/pdf/2308.12950}
+}
+% creative gen 
+@article{dang2022prompt,
+  title={How to prompt? Opportunities and challenges of zero-and few-shot learning for human-AI interaction in creative applications of generative models},
+  author={Dang, Hai and Mecke, Lukas and Lehmann, Florian and Goller, Sven and Buschek, Daniel},
+  journal={arXiv preprint arXiv:2209.01390},
+  year={2022}
+}
+% LLM adversarial exmaples
+@article{schulhoff2023ignore,
+  title={Ignore {T}his {T}itle and {H}ack{A}{P}rompt: {E}xposing {S}ystemic {V}ulnerabilities of {LLM}s through a {G}lobal {S}cale {P}rompt {H}acking {C}ompetition},
+  author={Schulhoff, Sander and Pinto, Jeremy and Khan, Anaum and Bouchard, Louis-Fran{\c{c}}ois and Si, Chenglei and Anati, Svetlina and Tagliabue, Valen and Kost, Anson Liu and Carnahan, Christopher and Boyd-Graber, Jordan},
+    booktitle = "Proceedings of the 2023 Conference on Empirical Methods in Natural Language Processing",
+    month = dec,
+    year = "2023",
+    publisher = "Association for Computational Linguistics",
+    url = "https://aclanthology.org/2023.emnlp-main.302",
+    doi = "10.18653/v1/2023.emnlp-main.302",
+}
+@article{liu2023prompt,
+  title={Prompt {I}njection attack against {LLM}-integrated {A}pplications},
+  author={Liu, Yi and Deng, Gelei and Li, Yuekang and Wang, Kailong and Zhang, Tianwei and Liu, Yepang and Wang, Haoyu and Zheng, Yan and Liu, Yang},
+  journal={arXiv preprint arXiv:2306.05499},
+  year={2023},
+doi={10.48550/arXiv.2310.12815}
+}
+@article{yao2023llm,
+  title={{LLM} {L}ies: {H}allucinations are not bugs, but features as adversarial examples},
+  author={Yao, Jia-Yu and Ning, Kun-Peng and Liu, Zhen-Hui and Ning, Mu-Nan and Yuan, Li},
+  journal={arXiv preprint arXiv:2310.01469},
+  year={2023},
+doi={https://doi.org/10.48550/arXiv.2310.01469}
+}
+
+%hallucinates
+@article{zhang2023siren,
+  title={Siren's {S}ong in the {AI} {O}cean: a {S}urvey on {H}allucination in {L}arge {L}anguage {M}odels},
+  author={Zhang, Yue and Li, Yafu and Cui, Leyang and Cai, Deng and Liu, Lemao and Fu, Tingchen and Huang, Xinting and Zhao, Enbo and Zhang, Yu and Chen, Yulong and others},
+  journal={arXiv preprint arXiv:2309.01219},
+  year={2023},
+doi={https://doi.org/10.48550/arXiv.2309.01219}
+}
+@article{Ji2023nlg,
+author = {Ji, Ziwei and Lee, Nayeon and Frieske, Rita and Yu, Tiezheng and Su, Dan and Xu, Yan and Ishii, Etsuko and Bang, Ye Jin and Madotto, Andrea and Fung, Pascale},
+title = {Survey of {H}allucination in {N}atural {L}anguage {G}eneration},
+year = {2023},
+issue_date = {December 2023},
+publisher = {Association for Computing Machinery},
+volume = {55},
+number = {12},
+issn = {0360-0300},
+url = {https://doi.org/10.1145/3571730},
+doi = {10.1145/3571730},
+journal = {ACM Computing Surveys},
+month = {mar},
+articleno = {248},
+numpages = {38}
+}
+
+
+% fact-checking
+@inproceedings{lee2020language,
+    title = "Language {M}odels as {F}act {C}heckers?",
+    author = "Lee, Nayeon  and
+      Li, Belinda Z.  and
+      Wang, Sinong  and
+      Yih, Wen-tau  and
+      Ma, Hao  and
+      Khabsa, Madian",
+    editor = "Christodoulopoulos, Christos  and
+      Thorne, James  and
+      Vlachos, Andreas  and
+      Cocarascu, Oana  and
+      Mittal, Arpit",
+    booktitle = "Proceedings of the Third Workshop on Fact Extraction and VERification (FEVER)",
+    month = jul,
+    year = "2020",
+    publisher = "Association for Computational Linguistics",
+    url = "https://aclanthology.org/2020.fever-1.5",
+    doi = "10.18653/v1/2020.fever-1.5",
+    pages = "36--41"
+}
+
+@article{lee2021towards,
+  title={Towards {F}ew-shot {F}act-{C}hecking via {P}erplexity},
+  author={Lee, Nayeon and Bang, Yejin and Madotto, Andrea and Khabsa, Madian and Fung, Pascale},
+    booktitle = "Proceedings of the 2021 Conference of the North American Chapter of the Association for Computational Linguistics: Human Language Technologies",
+    month = jun,
+    year = "2021",
+    publisher = "Association for Computational Linguistics",
+    url = "https://aclanthology.org/2021.naacl-main.158",
+    doi = "10.18653/v1/2021.naacl-main.158",
+    pages = "1971--1981",
+}
+
+
+@inproceedings{si2023large,
+  title={Large {L}anguage {M}odels {H}elp {H}umans {V}erify {T}ruthfulness--{E}xcept {W}hen {T}hey {A}re {C}onvincingly {W}rong},
+  author={Si, Chenglei and Goyal, Navita and Wu, Sherry Tongshuang and Zhao, Chen and Feng, Shi and Daum{\'e} III, Hal and Boyd-Graber, Jordan},
+  booktitle=naacl,
+  year={2024},
+doi={https://doi.org/10.48550/arXiv.2310.12558}
+}
+@article{Thorne2018FEVERAL,
+  title={{FEVER}: a {L}arge-scale {D}ataset for {F}act {E}xtraction and {VER}ification},
+  author={James Thorne and Andreas Vlachos and Christos Christodoulopoulos and Arpit Mittal},
+    booktitle = "Proceedings of the 2018 Conference of the North {A}merican Chapter of the Association for Computational Linguistics: Human Language Technologies, Volume 1 (Long Papers)",
+    month = jun,
+    year = "2018",
+    publisher = "Association for Computational Linguistics",
+    url = "https://aclanthology.org/N18-1074",
+    doi = "10.18653/v1/N18-1074",
+}
+@inproceedings{Schuster2021GetYV,
+  title={Get {Y}our {V}itamin {C}! {R}obust {F}act {V}erification with {C}ontrastive {E}vidence},
+  author={Tal Schuster and Adam Fisch and Regina Barzilay},
+  booktitle={North American Chapter of the Association for Computational Linguistics},
+  year={2021},
+  url={https://api.semanticscholar.org/CorpusID:232233599}
+}
+@article{Guo2021ASO,
+    title = "A {S}urvey on {A}utomated {F}act-{C}hecking",
+    author = "Guo, Zhijiang  and
+      Schlichtkrull, Michael  and
+      Vlachos, Andreas",
+    editor = "Roark, Brian  and
+      Nenkova, Ani",
+    journal = "Transactions of the Association for Computational Linguistics",
+    volume = "10",
+    year = "2022",
+    publisher = "MIT Press",
+    url = "https://aclanthology.org/2022.tacl-1.11",
+    doi = "10.1162/tacl_a_00454",
+    pages = "178--206"
+}
+
+
+@inproceedings{wadden-etal-2020-fact,
+    title = "Fact or {F}iction: {V}erifying {S}cientific {C}laims",
+    author = "Wadden, David  and
+      Lin, Shanchuan  and
+      Lo, Kyle  and
+      Wang, Lucy Lu  and
+      van Zuylen, Madeleine  and
+      Cohan, Arman  and
+      Hajishirzi, Hannaneh",
+    editor = "Webber, Bonnie  and
+      Cohn, Trevor  and
+      He, Yulan  and
+      Liu, Yang",
+    booktitle = "Proceedings of the 2020 Conference on Empirical Methods in Natural Language Processing (EMNLP)",
+    year = "2020",
+    publisher = "Association for Computational Linguistics",
+    url = "https://aclanthology.org/2020.emnlp-main.609",
+    doi = "10.18653/v1/2020.emnlp-main.609"
+}
+%contraollable LM
+@inproceedings{wu2022aichains,
+author = {Wu, Tongshuang and Terry, Michael and Cai, Carrie Jun},
+title = {{AI} {C}hains: {T}ransparent and {C}ontrollable {H}uman-{AI} {I}nteraction by {C}haining {L}arge {L}anguage {M}odel {P}rompts},
+year = {2022},
+isbn = {9781450391573},
+publisher = {Association for Computing Machinery},
+url = {https://doi.org/10.1145/3491102.3517582},
+doi = {10.1145/3491102.3517582},
+booktitle = {Proceedings of the 2022 CHI Conference on Human Factors in Computing Systems},
+articleno = {385},
+numpages = {22},
+keywords = {Human-AI Interaction, Large Language Models, Natural Language Processing},
+series = {CHI '22}
+}
+@article{wei2022chain,
+  title={Chain-of-{T}hought {P}rompting {E}licits {R}easoning in {L}arge {L}anguage {M}odels},
+  author={Wei, Jason and Wang, Xuezhi and Schuurmans, Dale and Bosma, Maarten and Xia, Fei and Chi, Ed and Le, Quoc V and Zhou, Denny and others},
+  journal={Advances in Neural Information Processing Systems},
+  volume={35},
+  pages={24824--24837},
+  year={2022},
+url = {https://proceedings.neurips.cc/paper_files/paper/2022/file/9d5609613524ecf4f15af0f7b31abca4-Paper-Conference.pdf}
+}
+
+@article{adolphs2021reason,
+  title={{R}eason first, then respond: {M}odular {G}eneration for {K}nowledge-infused {D}ialogue},
+  author={Adolphs, Leonard and Shuster, Kurt and Urbanek, Jack and Szlam, Arthur and Weston, Jason},
+  journal={Findings of the Association for Computational Linguistics: EMNLP 2022},
+  year={2022},
+  url= {https://aclanthology.org/2022.findings-emnlp.527.pdf}
+}
+
+% misinformation
+@inproceedings{zhou2023synlies,
+author = {Zhou, Jiawei and Zhang, Yixuan and Luo, Qianni and Parker, Andrea G and De Choudhury, Munmun},
+title = {Synthetic {L}ies: Understanding {AI}-{G}enerated {M}isinformation and {E}valuating {A}lgorithmic and {H}uman {S}olutions},
+year = {2023},
+isbn = {9781450394215},
+publisher = {Association for Computing Machinery},
+url = {https://doi.org/10.1145/3544548.3581318},
+doi = {10.1145/3544548.3581318},
+booktitle = {Proceedings of the 2023 CHI Conference on Human Factors in Computing Systems},
+articleno = {436},
+numpages = {20},
+keywords = {AI-generated misinformation, COVID-19, GPT, generative AI, large language model, misinformation, responsible AI},
+series = {CHI '23}
+}
+%probe truthful 
+@article{azaria2023internal,
+  title={{T}he {I}nternal {S}tate of an {LLM} {K}nows {W}hen {I}t’s {L}ying},
+  author={Azaria, Amos and Mitchell, Tom},
+  journal={Findings of the Association for Computational Linguistics: EMNLP 2023},
+  year={2023},
+    url={https://aclanthology.org/2023.findings-emnlp.68.pdf}
+}
+@article{li2024inference,
+  title={Inference-{T}ime {I}ntervention:
+{E}liciting {T}ruthful {A}nswers from a {L}anguage {M}odel},
+  author={Li, Kenneth and Patel, Oam and Vi{\'e}gas, Fernanda and Pfister, Hanspeter and Wattenberg, Martin},
+  journal=nips,
+  volume={36},
+  year={2024},
+url={https://proceedings.neurips.cc/paper_files/paper/2023/file/81b8390039b7302c909cb769f8b6cd93-Paper-Conference.pdf}
+}
+
+% text gen
+@article{brown2020language,
+  title={Language {M}odels are {F}ew-{S}hot {L}earners},
+  author={Brown, Tom and Mann, Benjamin and Ryder, Nick and Subbiah, Melanie and Kaplan, Jared D and Dhariwal, Prafulla and Neelakantan, Arvind and Shyam, Pranav and Sastry, Girish and Askell, Amanda and others},
+  journal=nips,
+  year={2020},
+url={https://papers.nips.cc/paper_files/paper/2020/file/1457c0d6bfcb4967418bfb8ac142f64a-Paper.pdf}
+}
+@inproceedings{devlin2018bert,
+    title = "{BERT}: {P}re-training of {D}eep {B}idirectional {T}ransformers for {L}anguage {U}nderstanding",
+    author = "Devlin, Jacob  and
+      Chang, Ming-Wei  and
+      Lee, Kenton  and
+      Toutanova, Kristina",
+    editor = "Burstein, Jill  and
+      Doran, Christy  and
+      Solorio, Thamar",
+    booktitle = "Proceedings of the 2019 Conference of the North {A}merican Chapter of the Association for Computational Linguistics: Human Language Technologies, Volume 1 (Long and Short Papers)",
+    year = "2019",
+    publisher = "Association for Computational Linguistics",
+    url = "https://aclanthology.org/N19-1423",
+    doi = "10.18653/v1/N19-1423"
+}
+@article{touvron2023llama,
+  title={{LL}a{MA}: {O}pen and {E}fficient {F}oundation {L}anguage {M}odels},
+  author={Touvron, Hugo and Lavril, Thibaut and Izacard, Gautier and Martinet, Xavier and Lachaux, Marie-Anne and Lacroix, Timoth{\'e}e and Rozi{\`e}re, Baptiste and Goyal, Naman and Hambro, Eric and Azhar, Faisal and others},
+  journal={arXiv preprint arXiv:2302.13971},
+  year={2023},
+url={https://arxiv.org/pdf/2302.13971}
+}
+
+@inproceedings{eisenschlos2021fool,
+    title = "Fool {M}e {T}wice: {E}ntailment from {W}ikipedia {G}amification",
+    author = {Eisenschlos, Julian  and
+      Dhingra, Bhuwan  and
+      Bulian, Jannis  and
+      B{\"o}rschinger, Benjamin  and
+      Boyd-Graber, Jordan},
+    editor = "Toutanova, Kristina  and
+      Rumshisky, Anna  and
+      Zettlemoyer, Luke  and
+      Hakkani-Tur, Dilek  and
+      Beltagy, Iz  and
+      Bethard, Steven  and
+      Cotterell, Ryan  and
+      Chakraborty, Tanmoy  and
+      Zhou, Yichao",
+    booktitle = "Proceedings of the 2021 Conference of the North American Chapter of the Association for Computational Linguistics: Human Language Technologies",
+    month = jun,
+    year = "2021",
+    publisher = "Association for Computational Linguistics",
+    url = "https://aclanthology.org/2021.naacl-main.32",
+    doi = "10.18653/v1/2021.naacl-main.32"
+}
